# rockchip-rknpu2

./: README.md  rknn_server_proxy.md
examples/: README.md
examples/rknn_common_test/src/: main.cc
examples/rknn_mobilenet_demo/: CMakeLists.txt  README.md
examples/rknn_mobilenet_demo/convert_rknn_demo/mobilenet_v1_tf/: config.sh  onnx2rknn.py
examples/rknn_mobilenet_demo/src/: main_zero_copy.cc
examples/rknn_yolov5_demo/: CMakeLists.txt  README.md  build-linux_RV110X.sh
runtime/RK356X/Android/rknn_server/arm/: rknn_server
runtime/RK356X/Android/rknn_server/arm64/: rknn_server
runtime/RK3588/Android/librknn_api/include/: rknn_api.h
runtime/RK3588/Android/rknn_server/arm/: rknn_server
runtime/RK3588/Android/rknn_server/arm64/: rknn_server
runtime/RV110X/Linux/librknn_api/include/: rknn_api.h
